LU-17983 mdt: mti_big_lov and mti_big_lmv

Currently mti_big_lmm can be used for LOV, LMV and as a
generic buffer in mdt_attr_get_pfid() and mdt_attr_get_pfid_name()

The LOV and LMV are not mutually exclusive and should be split
into separate buffers so one does not over write the other.

HPE-bug-id: LUS-11657
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: Icc4c5676a24d92a6448e21fe1d66a851a17de46e
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55551
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Alexander Boyko <alexander.boyko@hpe.com>
Reviewed-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>